[metadata]
name = Pipenv Project
description =
author = Jonathon Vandezande
version =
url = git@github.com:jevandezande/pipenv_project
long_description = file: README.md
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
python_requires = >= 3.10
test_suite = tests/

[options.packages.find]
where = .

[options.entry_points]
console_scripts =

[mypy]
files = pipenv_project, tests
ignore_missing_imports = true

[flake8]
ignore = E203, E266, E501, W503, E731
max-line-length = 100
max-complexity = 18
select = B, C, E, F, W, T4

[pylint]
max-line-length = 100

[pylint:messages_control]
disable = C0330, C0326

[tool:pytest]
testpaths = tests/
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE
